crates/conjure-cp/tests/ui/fail/test_variable.stderr
error: Syntax error: Found variable: 'x'. Did you mean to pass a meta-variable: '&x'?
       Referencing variables by name is not supported because all references must point to a Declaration, which may not exist in the current context.
       x + 2
        ^-- Error here
 --> tests/ui/fail/test_variable.rs:5:5
  |
5 |     essence_expr!(x + 2);
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `essence_expr` (in Nightly builds, run with -Z macro-backtrace for more info)
